--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "dotenv": "^16.5.0",
+    "graphql": "^16.11.0",
+    "mongoose": "^8.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
